# pdf-trad

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/pdf_trad/: __init__.py  cli.py  layout.py  ocr.py  pdf_rebuilder.py  translation.py
tests/: __init__.py  test_layout.py  test_ocr.py
