[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-trad"
version = "0.1.0"
description = "Outil pour traduire des PDFs scannés en conservant le layout original"
readme = "README.md"
authors = ["EricDelannoy <eric.delannoy@example.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = ["pdf", "ocr", "translation", "layout", "scanned"]

[tool.poetry.dependencies]
python = "^3.10"

# OCR et traitement d'images
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
opencv-python = "^4.8.0"
Pillow = "^10.0.0"
scikit-image = "^0.21.0"

# Traitement PDF
pymupdf = "^1.23.5"
pdfplumber = "^0.10.3"

# Détection de layout
layoutparser = "^0.3.4"

# Traduction (API OpenAI locale)
openai = "^1.3.0"
llama-cpp-python = "^0.2.0"
requests = "^2.31.0"

# CLI
click = "^8.1.7"

# Sérialisation
pydantic = "^2.5.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
types-pyyaml = "^6.0.1.1"
types-requests = "^2.31.0.0"

[tool.poetry.scripts]
pdf-trad = "pdf_trad.cli:main"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/pdf_trad --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
